cc-node/last-hash auth (FIXME: actually check the db)
