# accounting/src/federation/creditcommons/routes.ts
@@ -1,6 +1,6 @@
 import { Router } from "express";
 import { SharedController } from "src/controller";
-import { noAuth } from "src/server/auth";
+import { noAuth, lastHashAuth } from "src/server/auth";
 import { asyncHandler } from "src/server/handlers";
 
 /**
@@ -15,7 +15,7 @@ export function getRoutes(controller: SharedController) {
   /**
    * Propose transaction.
    */
-  router.post('/transaction', noAuth(), asyncHandler(async (req, res) => {
+  router.post('/transaction', lastHashAuth(), asyncHandler(async (req, res) => {
     // TODO
     res.status(200).json({ message: 'Welcome to the Credit Commons federation protocol.' })
   }))
